# locus

./: .project.json  Cargo.toml  README.md  TODO.md  agents.md  schema.yaml
contrib/systemd/user/: README.md  locus-niri.service  locusd.service
locus-api/: Cargo.toml
locus-api/src/: lib.rs
locus-codegen/: Cargo.toml
locus-codegen/src/: args.rs  main.rs  producer.rs
locus-codegen/src/shell/: base.sh  mod.rs
locus-codegen/src/typescript/: dbus_client.ts  mod.rs  rx_adapter.ts
locus-core/: Cargo.toml
locus-core/src/: error.rs  lib.rs  resolve.rs  service.rs  service_tests.rs  state.rs  static_store.rs  types.rs
locus-dbus/: Cargo.toml
locus-dbus/src/: error.rs  interfaces.rs  lib.rs  state.rs  watch.rs
locus-graph/: Cargo.toml
locus-graph/src/: main.rs
locus-niri/: Cargo.toml
locus-niri/src/: graph.rs  ipc.rs  main.rs  projection.rs  publisher.rs  tracing.rs
locus-schema/: Cargo.toml  README.md
locus-schema/src/: error.rs  lib.rs  model.rs  raw.rs  tests.rs  validation.rs
locusctl/: Cargo.toml
locusctl/src/: main.rs
locusd/: Cargo.toml
locusd/src/: main.rs
src/: api.rs  dbus.rs  lib.rs  paths.rs  service.rs  state.rs  storage.rs
