[package]
name = "locus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
camino = "1.2.2"
clap = { version = "4.5.56", features = ["derive"] }
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
zbus = { version = "5.15.0", default-features = false, features = ["tokio"] }
zvariant = "5.8.0"

[dev-dependencies]
tempfile = "3.23.0"
