[package]
name = "locus"
version = "0.1.0"
edition = "2024"

[features]
default = ["cli", "server"]
cli = [
    "server",
    "dep:anyhow",
    "dep:cel",
    "dep:clap",
    "dep:futures-util",
    "dep:niri-ipc",
    "dep:tokio",
]
server = [
    "dep:camino",
    "dep:dirs",
    "dep:rusqlite",
    "dep:thiserror",
    "dep:tokio",
    "dep:sha2",
]

[dependencies]
anyhow = { version = "1.0.100", optional = true }
camino = { version = "1.2.2", optional = true }
cel = { version = "0.13.0", optional = true }
clap = { version = "4.5.56", features = ["derive"], optional = true }
dirs = { version = "6.0.0", optional = true }
futures-util = { version = "0.3.32", optional = true }
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
niri-ipc = { version = "=25.11.0", optional = true }
sha2 = { version = "0.10.9", optional = true }
thiserror = { version = "2.0.18", optional = true }
tokio = { version = "1.52.1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"], optional = true }
zbus = { version = "5.15.0", default-features = false, features = ["tokio"] }

[dev-dependencies]
tempfile = "3.23.0"
