[package]
name = "locus-niri"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
locus-dbus = { path = "../locus-dbus" }
niri-ipc = "=25.11.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1.44"
tracing-perfetto = "0.1.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zbus = { version = "5.15.0", default-features = false, features = ["tokio"] }
