[package]
name = "locusctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cel = "0.13.0"
clap = { version = "4.5.56", features = ["derive"] }
futures-util = "0.3.32"
locus-dbus = { path = "../locus-dbus" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal"] }
zbus = { version = "5.15.0", default-features = false, features = ["tokio"] }
