[package]
name = "locusd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
locus-core = { path = "../locus-core" }
locus-dbus = { path = "../locus-dbus" }
locus-schema = { path = "../locus-schema" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal"] }
